--- a/search.css
+++ b/search.css
@@ -127,8 +127,33 @@ button {
 
 button:focus,
 button:hover {
+	cursor: pointer;
 		background: linear-gradient(
 			to bottom right, 
 			rgba(139,125,239, 0.7), rgba(59,153,239, .9)
 		);
+}
+
+.navigation {
+  margin-top: 2em;
+  list-style: none;
+  text-align: center;
+  padding-left: 0;
+}
+
+.navigation a {
+  display: inline-block;
+  padding: 20px 180px;
+  text-decoration: none;
+  font-family: sans-serif;
+  color: #000;
+}
+
+.navigation a:hover,
+.navigation a:focus {
+  background: 
+    linear-gradient(
+      to bottom right, 
+      rgba(139,125,239, 0.65), rgba(59,153,239, .65)
+    );
 }
