--- a/search.css
+++ b/search.css
@@ -146,7 +146,7 @@ button:hover {
   padding: 20px 180px;
   text-decoration: none;
   font-family: sans-serif;
-  color: #000;
+  color: #fff;
 }
 
 .navigation a:hover,
